--- a/index.html
+++ b/index.html
@@ -8,23 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="practice">
-        <div class="content1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </div>
-
-        <div class="content2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </div>
-    </header>
-
-    <main class="content3">
-        
-    </main>
-
-    <aside class="leftcontent">
+    <asideleft class="leftcontent">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Repellat cupiditate labore voluptate commodi ab maiores.
-    </aside>
+    </asideleft>
+
+    <asideright class="rightcontent">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Repellat cupiditate labore voluptate commodi ab maiores.
+    </asideright>
+
+    <header class="practice">
+        <span class="content1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </span>
+
+        <span class="content2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </span>
+    </header>
+    
+    <main>
+        <span class="content3">
+            TESTE
+        </span>
+
+        <span class="content3">
+            TESTE
+        </span>
+    </main>
 </body>
 </html>
