--- a/index.html
+++ b/index.html
@@ -8,34 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <asideleft class="leftcontent">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Repellat cupiditate labore voluptate commodi ab maiores.
-    </asideleft>
+    <aside id="leftbar">
+        Hello, World!
+    </aside>
 
-    <asideright class="rightcontent">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Repellat cupiditate labore voluptate commodi ab maiores.
-    </asideright>
+    <aside id="rightbar">
+        Hello, World!
+    </aside>
 
-    <header class="practice">
-        <span class="content1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </span>
+    <div class="center"> <!--Center-->
+        <header class="header">
+            <span class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </span>
 
-        <span class="content2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </span>
-    </header>
-    
-    <main>
-        <span class="content3">
-            TESTE
-        </span>
+            <span class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </span>
+        </header><br>
 
-        <span class="content3">
-            TESTE
-        </span>
-    </main>
+
+    </div>
 </body>
 </html>
