--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Hello, World!
     </aside>
 
-    <div class="center"> <!--Center-->
+    <div id="center"> <!--Center-->
         <header class="header">
             <span class="content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -25,9 +25,14 @@
             <span class="content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </span>
-        </header><br>
+        </header>
+        
 
-
+    </div>
+    <div id="center">
+            <div class="article">
+                Hello World!
+            </div>
     </div>
 </body>
 </html>
