--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         Hello, World!
     </aside>
 
-    <div id="center"> <!--Center-->
-        <header class="header">
-            <span class="content">
+    <div class="center-header"> <!--Center-->
+        <header class="header"> <!--Header Box-->
+            <span class="content"> <!--Header Content-->
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </span>
 
@@ -29,9 +29,11 @@
         
 
     </div>
-    <div id="center">
+    <div id="center-body">
             <div class="article">
-                Hello World!
+                <div class="content-body">
+                    <img class="img" src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0f/ba/29/5c/img-worlds-of-adventure.jpg?w=1200&h=-1&s=1" alt="Dinosaurs' Park" width="477" height="357">
+                </div>
             </div>
     </div>
 </body>
