--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <aside id="leftbar">
-        Hello, World!
+        <ul class="socialmedias">
+            <li class="icon">Instagram</li>
+            <li class="icon">Facebook</li>
+            <li class="icon">Twitter</li>
+            <li class="icon">Youtube</li>
+            <li class="icon">Whatsapp</li>
+        </ul>
     </aside>
 
     <aside id="rightbar">
@@ -19,7 +25,7 @@
     <div class="center-header"> <!--Center-->
         <header class="header"> <!--Header Box-->
             <span class="content"> <!--Header Content-->
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <img src="images/logo.png" alt="News" class="logo-img"  width:"477px" height="477px">
             </span>
 
             <span class="content">
